# thicket-ai

./: .gitignore  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION.md  LICENSE  Makefile  README.md  gaps.md  plan.md
.github/workflows/: ci.yml
apps/py/cli/: cli.py
apps/py/demo/: delegation_demo.py  run_demo.py
apps/py/profiler/: profiler.py
crates/thicket-core/: Cargo.toml
crates/thicket-core/src/: capability.rs  checkpoint.rs  crypto.rs  error.rs  identity.rs  lib.rs  record.rs
crates/thicket-core/tests/: kernel.rs
crates/thicket-directory/: Cargo.toml
crates/thicket-directory/examples/: directory_server.rs
crates/thicket-directory/src/: client.rs  error.rs  lib.rs  server.rs  wire.rs
crates/thicket-directory/tests/: directory.rs
crates/thicket-federation/: Cargo.toml
crates/thicket-federation/src/: federation.rs  lib.rs  peer.rs  profile.rs
crates/thicket-federation/tests/: federation.rs
crates/thicket-interconnect/: Cargo.toml
crates/thicket-interconnect/src/: envelope.rs  error.rs  grant.rs  handshake.rs  lib.rs  util.rs
crates/thicket-interconnect/tests/: interconnect.rs  vectors.rs
crates/thicket-net/: Cargo.toml
crates/thicket-net/examples/: echo_server.rs  grant_gated_server.rs  rust_caller.rs
crates/thicket-net/src/: conn.rs  error.rs  framing.rs  handshake.rs  identity.rs  lib.rs  secure.rs  server.rs
crates/thicket-net/tests/: integration.rs  net.rs
crates/thicket-registry/: Cargo.toml
crates/thicket-registry/src/: embedder.rs  lib.rs  registry.rs
crates/thicket-registry/tests/: registry.rs
crates/thicket-trust/: Cargo.toml
crates/thicket-trust/src/: attestation.rs  error.rs  lib.rs  reputation.rs  scoring.rs
crates/thicket-trust/tests/: trust.rs
fibers/py/collector/: collector.py
fibers/py/llm/: llm.py
fibers/py/memory/: memory.py
fibers/py/router/: router.py
fibers/py/state/: state.py
fibers/py/tool_calc/: calc.py
fibers/py/tool_fs/: fs.py
fibers/py/trigger/: trigger.py
sdk/py/: .coveragerc  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
sdk/py/tests/: test_checkpoint.py  test_client.py  test_conformance.py  test_delegation.py  test_directory_interop.py  test_durable_weave.py  test_federation.py  test_fibers_edge.py  test_grant_interop.py  test_interop.py  test_interop_rust_caller.py  test_negative_paths.py  test_quota_and_persistence.py  test_sdk_units.py  test_smoke.py  test_state_fiber.py  test_wave1.py  test_wave2.py  test_wave3.py  test_wave4.py
sdk/py/thicket/: __init__.py  app.py  cbor.py  checkpoint.py  conn.py  crypto.py  directory.py  envelope.py  federation.py  fiber.py  framing.py  grant.py  identity.py  record.py  secure.py  server.py  store.py  tracing.py
spec/: thicket-wire.md
spec/vectors/: checkpoint.cbor  envelope.cbor  envelope.signin  grant.cbor  grant_constrained.cbor  record.cbor  record.json  record.signin  revocation.cbor
weaves/py/sum_describer/: weave.py
