[workspace]
resolver = "2"
members = [
    "crates/thicket-core",
    "crates/thicket-registry",
    "crates/thicket-interconnect",
    "crates/thicket-trust",
    "crates/thicket-federation",
    "crates/thicket-net",
    "crates/thicket-directory",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/thicket-ai/thicket"

# Guideline lints enforced across every crate (opt in per crate with
# `[lints] workspace = true`).
[workspace.lints.rust]
missing_debug_implementations = "warn"
unreachable_pub = "warn"
rust_2018_idioms = "warn"
unused_qualifications = "warn"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ciborium = "0.2"
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
hex = "0.4"
thiserror = "2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
snow = "0.10"
thicket-core = { path = "crates/thicket-core" }
thicket-registry = { path = "crates/thicket-registry" }
thicket-interconnect = { path = "crates/thicket-interconnect" }
thicket-net = { path = "crates/thicket-net" }
