[package]
name = "thicket-core"
description = "Thicket kernel: self-certifying identity, signed records, capability descriptors."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
ciborium.workspace = true
sha2.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
hex.workspace = true
thiserror.workspace = true
