[package]
name = "thicket-interconnect"
description = "Thicket interconnect: universal envelope, capability grants, and the auth handshake."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
thicket-core.workspace = true
serde.workspace = true
serde_json.workspace = true
ciborium.workspace = true
rand.workspace = true
thiserror.workspace = true
