[package]
name = "thicket-net"
description = "Thicket networking: framing, authenticated handshake, request/response + streaming sessions."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thicket-core.workspace = true
thicket-interconnect.workspace = true
serde.workspace = true
ciborium.workspace = true
rand.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
thicket-registry.workspace = true
