[package]
name = "thicket-registry"
description = "Thicket single-registry: register, resolve, and semantic capability search."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
thicket-core.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
thicket-core.workspace = true
