[package]
name = "thicket-trust"
description = "Thicket trust: signed attestations, Sybil-resistant reputation, cold-start ranking."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thicket-core.workspace = true
serde.workspace = true
thiserror.workspace = true
